Fixed spacing for offset-by-# classes

--- a/Assets/_scss/base/_grid.scss
+++ b/Assets/_scss/base/_grid.scss
@@ -45,7 +45,7 @@ $ Grid Classes
   // Creating .row .offset-by-# classes
   @for $i from 1 through $totalColumns - 1 {
     .offset-by-#{convert-number-to-word($i)} {
-      margin-left: gridCalc($i, $totalColumns) + ($columnGutter * 1.5);
+      margin-left: gridCalc($i, $totalColumns) + ($columnGutter);
     }
   }
 }
